Fix calendar overflow

--- a/resources/css/evenements/calendrier.scss
+++ b/resources/css/evenements/calendrier.scss
@@ -146,6 +146,7 @@
         /* Firefox */
 
         .jour {
+            height: min-content;
             margin: auto 2%;
             display: flex;
             flex-direction: row;
